<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background" >
    
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <TextView
	        android:id="@+id/txt_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:paddingBottom="@dimen/padding_main"
	        android:text="@string/txt_name" />
	
	    <EditText
	        android:id="@+id/input_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/txt_name"
	        android:layout_marginBottom="@dimen/padding_less"
	        android:ems="10"
	        android:inputType="text" />
	
	    <TextView
	        android:id="@+id/txt_desc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/input_name"
	        android:paddingBottom="@dimen/padding_main"
	        android:text="@string/txt_desc" />
	
	    <EditText
	        android:id="@+id/input_desc"
	        android:layout_width="wrap_content"
	        android:layout_height="150dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/txt_desc"
	        android:layout_marginBottom="@dimen/padding_less"
	        android:gravity="top"
	        android:ems="10"
	        android:inputType="textMultiLine" />
	
	    <TextView
	        android:id="@+id/txt_price"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/input_desc"
	        android:paddingBottom="@dimen/padding_main"
	        android:text="@string/txt_price" />
	
	    <EditText
	        android:id="@+id/input_price"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/txt_price"
	        android:layout_marginBottom="@dimen/padding_less"
	        android:ems="10"
	        android:inputType="numberDecimal" />
	
	    <Button
	        android:id="@+id/select_photo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/input_price"
	        android:layout_marginBottom="@dimen/padding_less"
	        android:text="@string/select_photo" />
	    
	    <Button
	        android:id="@+id/take_photo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/select_photo"
	        android:layout_alignBottom="@+id/select_photo"
	        android:layout_toRightOf="@+id/select_photo"
	        android:text="@string/take_photo" />
	    
	    <TextView
	        android:id="@+id/image_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/take_photo"
	        android:layout_alignTop="@+id/take_photo"
	        android:layout_marginLeft="@dimen/padding_less"
	        android:layout_marginTop="@dimen/padding_less"
	        android:layout_toRightOf="@+id/take_photo"
	        android:gravity="center_vertical"
	        android:maxLines="@integer/doubleline"
	        android:paddingBottom="@dimen/padding_main"
	        android:text="@string/empty" />
	    
	    <Button
	        android:id="@+id/save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/select_photo"
	        android:layout_marginBottom="@dimen/padding_main"
	        android:text="@string/save" />
	
	</RelativeLayout>
</ScrollView>